# veilid-dart

./: .metadata  Cargo.toml  README.md  ffigen.yaml  pubspec.yaml  veilid_dart.c
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/quanti/veilid_dart/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
hook/: build.dart
lib/: veilid_dart.dart
src/: .gitignore  Cargo.toml  build.rs  veilid_dart.h
src/src/: dart_ffi.rs  lib.rs  veilid_ffi.rs
test/: veilid_dart_test.dart
